# test_automation_review

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
python_pytest/: make_list_flatten.py  sort_dict.py
python_pytest/tests/: data_tests.py  test_flatten_list.py  test_sort_dict.py  utils.py
src/: exceptions.py  make_list_flatten.py  sort_dict.py  utils.py
tests/: test_flatten_list.py  test_sort_dict.py
tests/helpers/: data_tests.py
