[tool.poetry]
name = "test-automation-review"
version = "0.1.0"
description = ""
authors = ["vamskazi <vamskazi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
pre-commit = "^4.2.0"
black = "^25.1.0"
isort = "^6.0.1"
faker = "^37.1.0"
flake8-pytest-style = "^2.1.0"
flake8-pytest = "^1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
show-source = true

[tool.mypy]
ignore_missing_imports = true
strict = true
exclude = "(venv|\\.venv|build|dist|tests/helpers)"

[tool.black]
line-length = 79
target-version = ['py39']
skip-string-normalization = false
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''
